--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "in.blogspot.anselmbros.torchie"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 18
-        versionName "1.0.4"
+        versionCode 24
+        versionName "1.2.0-dev"
     }
     buildTypes {
         release {
@@ -23,8 +23,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:preference-v14:23.1.0'
-    compile 'com.android.support:preference-v7:23.1.0'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
 }
