modified build values for release

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "in.blogspot.anselmbros.torchie"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 24
-        versionName "1.2.0-dev"
+        versionCode 25
+        versionName "1.2.0"
     }
     buildTypes {
         release {
